# computer-graphics-Hierarchical-Mesh-Decomposition-using-Fuzzy-Clustering-and-Cuts

./: .gitignore  CMakeLists.txt  README.md  main.cpp  report.md  segmentNet  segmentNet_test  standard_header  test.cpp
common/: utils.cpp  utils.h
